# Cloud-Native-Gauntlet

./: .gitignore  ARCHITECTURE.md  README.md  Vagrantfile
ansible/: README.md  ansible.cfg  inventory.ini
ansible/playbooks/: base.yml  k3s.yml
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: main.yml
apps/: README.md
apps/rust-api/: Cargo.toml  Dockerfile  Dockerfile.simple
apps/rust-api/src/: auth.rs  main.rs  models.rs
apps/rust-api/src/routes/: auth.rs  mod.rs  tasks.rs
docs/: README.md  architecture.md
docs/diagrams/: architecture.mmd  auth-flow.mmd  gitops-pipeline.mmd
k8s/app/: binary-deployment.yaml  deployment.yaml  final-deployment.yaml  ingress.yaml  service.yaml  simple-server-deployment.yaml  working-deployment.yaml  working-rust-api.yaml
k8s/argocd/: deployment.yaml  simple-argocd.yaml
k8s/cnpg/: cluster.yaml  secrets.yaml
k8s/gitea/: deployment.yaml  service.yaml
k8s/keycloak/: deployment.yaml  keycloak-deployment.yaml  realm-gauntlet.json  service.yaml  simple-keycloak-k8s.yaml  simple-keycloak.yaml  working-keycloak.yaml
k8s/linkerd/: install-linkerd.sh  simple-linkerd.yaml
k8s/postgres/: simple-postgres.yaml
k8s/registry/: local-registry.yaml
scripts/: bootstrap.sh  build-and-load.sh  build-local-images.sh  day-by-day-execution.sh  final-status-check.sh  multipass_bootstrap.sh  status-check.sh
terraform/: README.md  inventory.tmpl  main.tf  variables.tf
